Production-Org-Metadata/force-app/main/default/objects/Payroll_Summary__c/Payroll_Summary__c.object-meta.xml
<CustomObject>
    <label>Payroll Summary</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Payroll Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>