Production-Org-Metadata/force-app/main/default/objects/Payroll_Summary__c/fields/Net_Total_Salary__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Salary__c</fullName>
    <label>Net Total Salary</label>
    <summarizedField>Payroll__c.Net_Salary__c</summarizedField>
    <summaryForeignKey>Payroll__c.Payroll_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>