Production-Org-Metadata/force-app/main/default/objects/Payroll_Summary__c/fields/Total_Basic_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Basic_Salary__c</fullName>
    <label>Total Basic Salary</label>
    <summarizedField>Payroll__c.Basic_Salary__c</summarizedField>
    <summaryForeignKey>Payroll__c.Payroll_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>