Production-Org-Metadata/force-app/main/default/objects/Payroll_Summary__c/fields/Total_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Total_Bonus__c</fullName>
    <label>Total Bonus</label>
    <summarizedField>Payroll__c.Bonus__c</summarizedField>
    <summaryForeignKey>Payroll__c.Payroll_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>