Production-Org-Metadata/force-app/main/default/objects/Payroll_Summary__c/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <label>Total Employees</label>
    <summaryForeignKey>Payroll__c.Payroll_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>