Production-Org-Metadata/force-app/main/default/objects/Payroll_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Net_Total_Salary__c</columns>
    <columns>Payroll_Month__c</columns>
    <columns>Payroll_Year__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Employees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>